# ML_anomaly_detection_PCBs

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  docker-compose.yaml  main.py  pyproject.toml
backend/app/: config.py
backend/app/core/: model_loader.py
backend/app/routes/: api.py
data/: README.md  generate_masks.py  main_raspi test.py  main_raspi.py  main_transistor.py  report.py  requirements.txt  resultados_experimentos_raspi_val_pixel_AUPRO.json  resultados_experimentos_raspi_val_pixel_F1Score.json  resultados_experimentos_transistor.json  resultados_experimentos_transistor_val_pixel_AUPRO.json  resultados_experimentos_transistor_val_pixel_F1Score.json
frontend/: Dockerfile  angular.json  docker-compose.yml  nginx.conf  package-lock.json  package.json  proxy.conf.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.config.ts  app.routes.ts
frontend/src/app/core/services/: api.service.ts  inspection.service.ts
frontend/src/app/core/sidebar/: sidebar.component.html  sidebar.component.scss  sidebar.component.ts
frontend/src/app/features/about/: about.component.html  about.component.scss  about.component.ts
frontend/src/app/features/dashboard/main/: dashboard.component.html  dashboard.component.scss  dashboard.component.ts
frontend/src/app/root/: app.component.html  app.component.scss  app.component.ts
frontend/src/app/shared/ui/badge/: badge.component.scss  badge.component.ts
frontend/src/app/shared/ui/button/: button.component.ts  (+1 more)
frontend/src/environments/: environment.prod.ts  environment.ts
(+18 files in other folders)
